Working setup with click

--- a/tests/requirements.yml
+++ b/tests/requirements.yml
@@ -1,4 +1,10 @@
 ---
+- name: ansible-role-plex
+  repo: https://github.com/wilmardo/ansible-role-plex
+  type: github
+  version: 2.1.0
+  dest: lib/
+
 - name: cmdb-callback
   repo: https://git.intermax.nl/team-automation/configuration_management/ansible/core/modules/cmdb-callback.git
   type: gitlab
