--- a/tests/requirements.yml
+++ b/tests/requirements.yml
@@ -5,8 +5,8 @@
   version: 2.1.0
   dest: lib/
 
-# - name: cmdb-callback
-#   repo: https://git.intermax.nl/team-automation/configuration_management/ansible/core/modules/cmdb-callback.git
-#   type: gitlab
-#   version: 1.0.2
-#   dest: lib/
+- name: cmdb-callback
+  repo: https://git.intermax.nl/automation-development/configuration_management/ansible/core/modules/cmdb-callback.git
+  type: gitlab
+  version: 1.0.2
+  dest: lib/
