--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ maintainer = Intermax Cloudsourcing
 maintainer_email = wilmaro@intermax.nl
 summary = Gip is a language agnostic dependency manager which uses API calls to pull repositories.
 description-file = README.md
-description-content-type = text/markdown; charset=UTF-8
+description-content-type = text/markdown
 project_urls =
     Bug Tracker = https://github.com/Intermax-Cloudsourcing/gip/issues
     Source Code = https://github.com/Intermax-Cloudsourcing/gip
