--- a/tests/requirements.yml
+++ b/tests/requirements.yml
@@ -8,5 +8,10 @@
 - name: cmdb-callback
   repo: https://git.intermax.nl/automation-development/configuration_management/ansible/core/modules/cmdb-callback.git
   type: gitlab
-  version: 1.0.2
+  version: 1.0.1
+  dest: lib/
+
+- name: ansible-role-domoticz
+  repo: https://github.com/wilmardo/ansible-role-domoticz.git
+  type: github
   dest: lib/
