fix(ci): Fix syntax for tags and stages

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,26 +1,29 @@
 ---
 image: docker:git
 
-tags:
-  - docker
-
 services:
   - docker:dind
 
 stages:
   - lint
+  - build
+  - release
 
 before_script:
   - apk add python3 make
 
 lint:
   stage: lint
+  tags:
+    - docker
   script:
-  - pip3 install flake8
-  - flake8 .
+    - pip3 install flake8
+    - flake8 .
 
 build:
   stage: build
+  tags:
+    - docker
   script:
     - pip3 install -r build-requirements.txt
     - make -f build/Makefile build
@@ -30,6 +33,8 @@ build:
 
 release:
   stage: release
+  tags:
+    - docker
   only:
     - tags
   except:
