fix(ci): Twine use ENV vars

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,4 +43,4 @@ release:
     - build
   script:
     - pip3 install -r build-requirements.txt
-    - make -f build/Makefile ci-push
+    - make -f build/Makefile push
