--- a/tests/requirements.yml
+++ b/tests/requirements.yml
@@ -11,7 +11,13 @@
   version: 1.0.1
   dest: lib/
 
-- name: ansible-role-domoticz
+- name: ansible_role_domoticz
   repo: https://github.com/wilmardo/ansible-role-domoticz.git
   type: github
+  dest: lib/
+
+- name: "10641"
+  repo: https://git.intermax.nl/automation-development/configuration_management/configuration/10641.git
+  type: gitlab
+  version: master
   dest: lib/
